--- a/tests/templates/login.html
+++ b/tests/templates/login.html
@@ -28,10 +28,18 @@
                         <form accept-charset="UTF-8" role="form" method="post"> {% csrf_token %}
 
                         <fieldset>
+
+                            {% if form.username.errors %}
+                                {{ form.username.errors }}
+                            {% elif form.password.errors %}
+                                {{ form.password.errors }}
+                            {% endif %}
+
                             <div class="form-group">
                                 <label for="username"> Username </label>
                                 <input type="text" class="form-control" name="username" id="username" placeholder="Username">
                             </div>
+
                             <div class="form-group">
                                 <label for="password"> Password </label>
                                 <input type="password" class="form-control" name="password" placeholder="Password">
