--- a/tests/static/tests/css/passing_the_test_style.css
+++ b/tests/static/tests/css/passing_the_test_style.css
@@ -5,6 +5,6 @@ p.test-name {
 }
 
 div.question {
-    margin-top: 75px;
-    text-align: center;
+    margin-top: 50px;
+    /*text-align: center;*/
 }
