--- a/tests/templates/result.html
+++ b/tests/templates/result.html
@@ -24,7 +24,7 @@
                         <h2 class="panel-title text-center ">Result</h2>
                     </div>
                     <div class="panel-body">
-                        <h4 class="text-center">{{ result }}/{{ total }} = {{ percent }}%</h4>
+                        <h4 class="text-center"> {{ result.mark }}/{{ total }} = {{ percent }}% </h4>
                     </div>
                     <div class="panel-footer">
                         <a href="/" class="btn btn-md active" role="button" aria-pressed="true"> Вернуться на главную </a>
