--- a/tests/templates/test.html
+++ b/tests/templates/test.html
@@ -25,11 +25,11 @@
             <td colspan="2"> <h2> {{ test.description }} </h2> </td>
         </tr>
         <tr class="text-center">
-            {% if test.number_of_passes > 0 %}
-                {% if not test.number_of_passes|in_list:'2, 3, 4, 22, 23, 24'  %}
-                    <td colspan="2"> <h2> Данный тест был пройдет уже {{ test.number_of_passes }} раз.</h2> </td>
+            {% if test.result_set.all.count > 0 %}
+                {% if not test.result_set.all.count|in_list:'2, 3, 4, 22, 23, 24'  %}
+                    <td colspan="2"> <h2> Данный тест был пройдет уже {{ test.result_set.all.count }} раз.</h2> </td>
                 {% else %}
-                    <td colspan="2"> <h2> Данный тест был пройдет уже {{ test.number_of_passes }} раза.</h2> </td>
+                    <td colspan="2"> <h2> Данный тест был пройдет уже {{ test.result_set.all.count }} раза.</h2> </td>
                 {% endif %}
             {% else %}
                 <td colspan="2"> <h2> Данный тест еще не проходили, Вы будете первым! :) </h2> </td>
@@ -39,7 +39,7 @@
             {% if result %}
                 {% if result.test == test and result.author == user %}
                     <td> <h3 class="message"> Вы уже проходили этот тест!</h3> </td>
-                    <td> <h3 class="result"> Ваш результат: {{ result.mark }}/{{ result.test.question.all|length }} = {{ percent }}% </h3> </td>
+                    <td> <h3 class="result"> Ваш результат: {{ result.mark }}/{{ result.test.question_set.all|length }} = {{ percent }}% </h3> </td>
                 {% else %}
                     {% if request.user.is_authenticated %}
                         <td colspan="2">
@@ -67,11 +67,11 @@
     </table>
 
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-md-5 col-md-offset-1">
             <h3>Comments:</h3>
-        </div><!-- /col-sm-12 -->
+        </div><!-- /col-md-5 -->
     </div><!-- /row -->
-
+    <br>
     {% if test.comment_set.all.count > 0 %}
 
         {% for comment in test.comment_set.all %}
@@ -79,9 +79,11 @@
 
                 <div class="row">
                     <div class="col-sm-1">
-                        <div class="thumbnail">
-                            <img class="img3" src="/media/{{ comment.author.avatar }}" alt="Img3">
-                        </div><!-- /thumbnail -->
+                        {% if comment.author.avatar %}
+                            <div class="thumbnail">
+                                    <img class="img3" src="/media/{{ comment.author.avatar }}" alt="Img3">
+                            </div><!-- /thumbnail -->
+                        {% endif %}
                     </div><!-- /col-sm-1 -->
 
                     <div class="col-sm-5">
@@ -100,7 +102,9 @@
         {% if request.user.is_authenticated %}
             <a href="{% url 'tests:add-comment' test_name=test.title %}" class="link btn btn-primary btn-md active" role="button" aria-pressed="true"> Добавить комментарий </a>
         {% else %}
-            Чтобы добавить комментарий, <a href="{% url 'login' %}"> авторизуйтесь </a> или <a href="{% url 'registration' %}"> зарегистрируйтесь </a>!
+            <div class="col-md-5 col-md-offset-1">
+                Чтобы добавить комментарий, <a href="{% url 'login' %}"> авторизуйтесь </a> или <a href="{% url 'registration' %}"> зарегистрируйтесь </a>!
+            </div>
         {% endif %}
     {% else %}
         <h4> У данного теста еще нет комментариев! </h4>
@@ -108,6 +112,7 @@
             <a href="{% url 'tests:add-comment' test_name=test.title %}" class="link1 btn btn-primary btn-md active" role="button" aria-pressed="true"> Добавить комментарий </a>
         {% else %}
             Чтобы добавить комментарий, <a href="{% url 'login' %}"> авторизуйтесь </a> или <a href="{% url 'registration' %}"> зарегистрируйтесь </a>!
-        {% endif %}    {% endif %}
+        {% endif %}
+    {% endif %}
 
 {% endblock content %}
