--- a/tests/templates/login.html
+++ b/tests/templates/login.html
@@ -42,7 +42,7 @@
 
                             <div class="form-group">
                                 <label for="password"> Password </label>
-                                <input type="password" class="form-control" name="password" placeholder="Password">
+                                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
                             </div>
 
                             <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
