--- a/tests/templates/home_page.html
+++ b/tests/templates/home_page.html
@@ -77,7 +77,13 @@
                         {% endfor %}
                     </ul>
                     {% if request.user.is_authenticated %}
-                        <a class="btn btn-lg btn-primary" href="{% url 'tests:add-test' %}"> Добавить тест </a><br>
+                        {% if request.user.is_staff %}
+                            <a class="btn btn-lg btn-primary" href="{% url 'tests:add-test' %}"> Добавить тест </a><br>
+                        {% else %}
+                            <div class="col-md-10 col-md-offset-2">
+                                <h4> Недостаточно прав для создания нового теста! </h4>
+                            </div>
+                        {% endif %}
                     {% else %}
                         Чтобы добавить новый тест, <a href="{% url 'login' %}"> авторизуйтесь </a> или <a href="{% url 'registration' %}"> зарегистрируйтесь </a>!
                     {% endif %}
@@ -94,9 +100,15 @@
         <div class="container-fluid">
             <div class="raw">
                 {% if request.user.is_authenticated %}
-                    <div class="col-md-6 col-md-offset-5">
-                        <a class="btn btn-lg btn-primary" href="{% url 'tests:add-test' %}"> Добавить тест </a><br>
-                    </div>
+                    {% if request.user.is_staff %}
+                        <div class="col-md-6 col-md-offset-5">
+                            <a class="btn btn-lg btn-primary" href="{% url 'tests:add-test' %}"> Добавить тест </a><br>
+                        </div>
+                    {% else %}
+                        <div class="col-md-10 col-md-offset-2">
+                            <h4> Недостаточно прав для создания нового теста! </h4>
+                        </div>
+                    {% endif %}
                 {% else %}
                     <div class="col-md-6 col-md-offset-4">
                         Чтобы добавить новый тест, <a href="{% url 'login' %}"> авторизуйтесь </a> или <a href="{% url 'registration' %}"> зарегистрируйтесь </a>!
