some changes in content language

--- a/tests/templates/add_comment.html
+++ b/tests/templates/add_comment.html
@@ -22,7 +22,7 @@
         <form role="form" method="post"> {% csrf_token %}
             <div class="form-group" >
                 <label for="comment_text"> Comment </label>
-                <textarea cols="40" rows="10" class="form-control" name="text" id="comment_text" placeholder="Написать коментарий"> </textarea>
+                <textarea cols="40" rows="10" class="form-control" name="text" id="comment_text" placeholder="Write a comment"> </textarea>
             </div>
 
             <input type="submit" class="btn btn-success" value="Add comment"/>
