--- a/tests/templates/add_test.html
+++ b/tests/templates/add_test.html
@@ -34,7 +34,7 @@
             </div>
 
 
-            <input type="submit" class="btn btn-md btn-success btn-block" value="Добавить вопросы"/>
+            <input type="submit" class="btn btn-md btn-success btn-block" value="Add questions"/>
         </form>
 
     </div>
