--- a/tests/templates/result.html
+++ b/tests/templates/result.html
@@ -27,7 +27,7 @@
                         <h4 class="text-center"> {{ result.mark }}/{{ total }} = {{ percent }}% </h4>
                     </div>
                     <div class="panel-footer">
-                        <a href="/" class="btn btn-md active" role="button" aria-pressed="true"> Вернуться на главную </a>
+                        <a href="/" class="btn btn-md active" role="button" aria-pressed="true"> Back to the main page </a>
                     </div>
                 </div>
             </div>
