--- a/tests/templates/test_added.html
+++ b/tests/templates/test_added.html
@@ -17,9 +17,9 @@
 {% block content %}
 <div class="container">
     <div class="raw">
-        <h3 class="text-center text-success"> Тест "{{ test }}" был успешно добавлен! </h3>
+        <h3 class="text-center text-success"> The test "{{ test }}" was successfully added! </h3>
         <div class="col-md-4 col-md-offset-5">
-            <a href="/" class="btn btn-md active" role="button" aria-pressed="true"> Вернуться на главную </a>
+            <a href="/" class="btn btn-md active" role="button" aria-pressed="true"> Back to the main page </a>
         </div>
     </div>
 </div>
